# trading-news

./: .gitignore  ARCHITECTURE.md  Dockerfile  README.md  activities.py  components.json  default_agent.py  docker-compose.yaml  docker-setup.sh  main.py  package-lock.json  package.json  pyproject.toml  simple_bot.py  start-system.sh  starter.py  tailwind.config.cjs  test.ipynb  trading-news.code-workspace  trading-news.sln  tsconfig.app.json  worker.py  workflow.py
agents/: agents.py  configs.yaml  custom_agents.py  edges.py  models.py  monitoring.py  nodes.py  prompts.py  states.py
agents/tools/: __init__.py  load_content.py  reduce_documents.py  retrive_documents.py  store_documents.py  structure_output.py
agents/tools/scripts/: __init__.py  loader.py  store.py  text_splitter.py
backend/services/: README.md
backend/services/feeder/: README.md  config.yaml  main.py  pyproject.toml
backend/services/listener/: Program.cs  README.md  Worker.cs  appsettings.json  listener.csproj
backend/services/news-feeder/: README.md  main.py  pyproject.toml
backend/services/news-feeder/scripts/: demo_rss_worker.py  run_temporal_worker.py
backend/services/news-feeder/src/: __init__.py  temporal_client.py
backend/services/news-feeder/src/activities/: __init__.py  rss_activities.py
backend/services/news-feeder/src/models/: __init__.py  news_item.py  worker_config.py
backend/services/news-feeder/src/workers/: __init__.py  base_worker.py  rss_worker.py  worker_factory.py
backend/services/news-feeder/src/workers/templates/: __init__.py  base_template.py  bbc_template.py  generic_template.py  kommersant_template.py  reuters_template.py
backend/services/news-feeder/src/workflows/: __init__.py  news_ingestion.py
backend/services/news-feeder/tests/: __init__.py  test_integration.py  test_models.py  test_temporal_client.py  test_workers.py
backend/services/news-tagger/: README.md  main.py  pyproject.toml
backend/services/news-tagger/scripts/: demo_integration.py  demo_tagger.py
backend/services/news-tagger/src/: __init__.py
backend/services/news-tagger/src/models/: __init__.py  news_item.py  tagger_config.py
backend/services/news-tagger/src/services/: __init__.py  llm_service.py
backend/services/news-tagger/tests/: __init__.py  test_llm_service.py  test_models.py
backend/services/news-tracker/: pyproject.toml
backend/services/parser/: activities.py  feeds.env  feeds_all.env  file.csv  pyproject.toml  starter.py  worker.py  (+1 more)
chroma_langchain_db/: chroma.sqlite3
example_api_configs/: news_analyzer_retriver.json  saver.json  summary.json
frontend/: .env  README.md  db.json  index.html  package-lock.json  package.json  tailwind.config.cjs  tsconfig.app.json  tsconfig.app.tsbuildinfo  vite.config.ts
frontend/src/: App.vue
infrastructure/: README.md  docker-compose.yaml
src/: App.vue  index.css  main.ts
src/app/: router.ts
src/components/: AppSidebar.vue  Calendars.vue  List.vue  NavMain.vue  NavMainSimple.vue  NavUser.vue  SidebarLeft.vue  SidebarRight.vue  TeamSwitcher.vue
src/pages/: Dashboard.vue  Main.vue  News.vue
src/styles/: fonts.css  index.css
src/trading_bot/: __init__.py
temporal/: docker-compose.yaml
wiki/: architecture.md  deployment.md  references.md  tech.md  technical.md
(+192 files in other folders)
