[project]
name = "trading-news"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiohttp>=3.11.18",
    "alembic>=1.16.1",
    "apscheduler>=3.11.0",
    "asyncpg>=0.30.0",
    "beautifulsoup4>=4.13.4",
    "celery>=5.5.2",
    "elasticsearch>=9.0.1",
    "fastapi>=0.115.12",
    "feedparser>=6.0.11",
    "numpy>=2.2.6",
    "openai>=1.82.0",
    "pandas>=2.2.3",
    "pydantic-settings>=2.9.1",
    "python-multipart>=0.0.20",
    "redis>=6.1.0",
    "requests>=2.32.3",
    "rich>=14.0.0",
    "scikit-learn>=1.6.1",
    "sqlalchemy>=2.0.41",
    "structlog>=25.3.0",
    "uvicorn[standard]>=0.34.2",
    "vadersentiment>=3.3.2",
]

[dependency-groups]
dev = [
    "black>=25.1.0",
    "httpx>=0.28.1",
    "mypy>=1.15.0",
    "pre-commit>=4.2.0",
    "pytest>=8.3.5",
    "pytest-asyncio>=0.26.0",
    "pytest-cov>=6.1.1",
]
