[project]
name = "trading-news"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langgraph>=0.4.8",
    "langchain-unstructured>=0.1.6",
    "temporalio>=1.11.1",
    "fastapi>=0.115.12",
    "aiogram>=3.20.0.post0",
    "uvicorn>=0.34.2",
    "python-dotenv>=1.1.0",
    "langchain-gigachat>=0.3.10",
    "langchain-text-splitters>=0.3.8",
    "langchain-experimental>=0.3.4",
    "langchain-postgres>=0.0.14",
    "langchain>=0.3.25",
    "langgraph-supervisor>=0.0.27",
    "langfuse",
    "ipykernel>=6.29.5",
    "ruff>=0.11.13",
    "yandex-cloud-ml-sdk>=0.11.0",
    "qdrant-client>=1.12.1",
    "langchain-qdrant>=0.2.0",
    "langchain-chroma>=0.2.2",
    "langchain-openai>=0.3.21",
]
